Migrate to Managers, downgrade to Java 17 for more compat